adding workflow endpoints, topology path image and JS client library
